# vio_start_from_zero

./: .gitignore  README.md
chap_1_introduction/: tasks.html
chap_1_introduction/task_2_update_of_quaternion_and_lie_algebra/: CMakeLists.txt  main.cpp
chap_1_introduction/task_3_derivation/: derivation.html
chap_2_imu_sensor/: imu_from_ground_truth.html  notes.html  tasks.html
chap_2_imu_sensor/task1/: .gitignore
chap_3_imu_preintegration_and_vision_fusion/: note.html  tasks.html
chap_3_imu_preintegration_and_vision_fusion/task1/CurveFitting_LM/app/: CMakeLists.txt  QuadraticCurveFitting.cpp
chap_3_imu_preintegration_and_vision_fusion/task1/damper_factor_viz/: damper_factor_viz.py
chap_5_solver/task_code/BA_schur/backend/: problem.cc
